More TUF-UI fixes and tweaks no.3 - Dark Mode
More dark, more transparent TUF-UI.

--- a/release/src/router/www/sysdep/FUNCTION/TUF_UI/NM_style.css
+++ b/release/src/router/www/sysdep/FUNCTION/TUF_UI/NM_style.css
@@ -310,7 +310,7 @@
 	margin-left:45px;
 	width: 320px;
 	height: 760px;
-	background-color:#111;
+	/* background-color:#111; */
 	behavior: url(/PIE.htc);
 	position:relative;
 	-webkit-border-radius: 0 0 10px 10px;
